applications/kiso-cli/src/test review